Fixed horizontal overflow

--- a/src/index.css
+++ b/src/index.css
@@ -3,9 +3,14 @@
 @tailwind utilities;
 
 @layer base {
-body {
+  html {
+    overflow-x: hidden;
+  }
+  
+  body {
     @apply font-sans antialiased bg-white text-dark-900;
-}
+    overflow-x: hidden;
+  }
 
   h1, h2, h3, h4, h5, h6 {
     @apply font-sans font-bold;
